--- a/media/fabacademy.css
+++ b/media/fabacademy.css
@@ -9,6 +9,17 @@
 			margin: 10px;
 		 }
 
+#cv {
+  -webkit-border-radius: 14px;
+  border-radius: 14px;
+  margin: auto;
+  text-align: center;
+  border: 1px solid #ccc;
+  border: 1px solid rgba(0, 0, 0, 0.15);
+  padding: 5px;
+  margin: 30px auto 30px auto !important;
+  display: block;
+}
 
 /* CSS from Bootstrap website: */
 
