--- a/media/fabacademy.css
+++ b/media/fabacademy.css
@@ -21,6 +21,53 @@
   display: block;
 }
 
+.container p img {
+  display: block;
+  padding: 4px;
+  line-height: 1;
+  max-width: 920px;
+  border: 1px solid #ddd;
+  -webkit-border-radius: 14px;
+  -moz-border-radius: 14px;
+  border-radius: 14px;
+  -webkit-box-shadow: 0 1px 1px rgba(0, 0, 0, 0.075);
+  -moz-box-shadow: 0 1px 1px rgba(0, 0, 0, 0.075);
+  box-shadow: 0 1px 1px rgba(0, 0, 0, 0.075);
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 15px;
+  margin-bottom:15px;
+}
+
+legend { 
+	margin:3px; 
+	text-align:center;
+	width:100%; 
+	font-size: 14px; 
+	border: 0px;   
+	line-height: 18px;
+	}
+
+.pic {
+  margin:3px; text-align:center;width:100%
+  display: block;
+  padding: 4px;
+  width: 940px;
+  line-height: 1;
+  border: 1px solid #ddd;
+  -webkit-border-radius: 14px;
+  -moz-border-radius: 14px;
+  border-radius: 14px;
+  -webkit-box-shadow: 0 1px 1px rgba(0, 0, 0, 0.075);
+  -moz-box-shadow: 0 1px 1px rgba(0, 0, 0, 0.075);
+  box-shadow: 0 1px 1px rgba(0, 0, 0, 0.075);
+  margin-left: auto;
+  margin-right: auto;
+  margin-top:20px;
+  margin-bottom:20px;
+}
+
+
 /* CSS from Bootstrap website: */
 
 /* Sticky footer styles
