--- a/media/fabacademy.css
+++ b/media/fabacademy.css
@@ -54,13 +54,14 @@ legend {
   padding: 4px;
   width: 940px;
   line-height: 1;
-  border: 1px solid #ddd;
+ /*  border: 1px solid #ddd;
   -webkit-border-radius: 14px;
   -moz-border-radius: 14px;
   border-radius: 14px;
   -webkit-box-shadow: 0 1px 1px rgba(0, 0, 0, 0.075);
   -moz-box-shadow: 0 1px 1px rgba(0, 0, 0, 0.075);
   box-shadow: 0 1px 1px rgba(0, 0, 0, 0.075);
+  */
   margin-left: auto;
   margin-right: auto;
   margin-top:20px;
