Add Gantt chart page and add credits to all footers

--- a/media/fabacademy.css
+++ b/media/fabacademy.css
@@ -92,3 +92,25 @@ body {
   background-color: #eee;
   padding: 20px;
 }
+
+
+/*  Fix iframe size
+	From http://www.bymichaellancaster.com/blog/fluid-iframe-and-images-without-javascript-plugins/
+	*/
+	
+.fluidMedia {
+    position: relative;
+    padding-bottom: 56.25%; /* proportion value to aspect ratio 16:9 (9 / 16 = 0.5625 or 56.25%) */
+    padding-top: 30px;
+    height: 0;
+    overflow: hidden;
+}
+
+.fluidMedia iframe {
+    position: absolute;
+    padding: 0px;
+    top: 0; 
+    left: 0;
+    width: 100%;
+    height: 100%;
+}
